--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,29 +1,18 @@
 .cardBox {
-  position: relative;
-  width: 380px;
-  height: 600px;
-  border-radius: 25px;
+  /* position: relative; */
+  width: 340px;
+  height: 460px;
   background: #11161c;
-}
-
-.contentBox * {
-  color: #fff;
-  text-decoration: none;
   display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  font-size: 16px;
-  opacity: 0.7;
-  justify-content: center;
+  flex-direction: column;
+  border-radius: 35px;
+  justify-content: space-between;
   align-items: center;
-}
-
-.contentBox {
-  height: 100%;
-  width: 80%;
 }
 
 .img {
   border-radius: 0 25 px 0 0;
   width: 100%;
+  height: 231px;
+  border-radius: 35px 35px 0 0;
 }
