--- a/src/components/Card/Links/Links.module.css
+++ b/src/components/Card/Links/Links.module.css
@@ -1,7 +1,21 @@
+.linkBox {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
 .link {
-  position: absolute;
-  width: 80%;
-  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  font-size: 26px;
+  opacity: 0.7;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .link:hover {
@@ -10,10 +24,6 @@
   opacity: 1;
 }
 
-.siteLink {
-  top: 78%;
-}
-
-.gitLink {
-  top: 87.5%;
+.link:last-child {
+  margin-bottom: 10px;
 }
