--- a/src/components/Card/Texnologys/Texnologys.module.css
+++ b/src/components/Card/Texnologys/Texnologys.module.css
@@ -5,14 +5,9 @@
 }
 
 .texnologyBox {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-  align-items: start;
   min-height: 130px;
   width: 100%;
-  /* border: 1px solid red; */
+  padding: 5px;
 }
 .texnology {
   padding: 5px 15px;
@@ -24,4 +19,13 @@
   opacity: 0.7;
   justify-content: center;
   align-items: center;
+}
+
+.box {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: start;
+  width: 100%;
 }
