--- a/src/components/CardBox/CardBox.module.css
+++ b/src/components/CardBox/CardBox.module.css
@@ -1,5 +1,9 @@
 .cardsBox {
-  display: flex;
-  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
   gap: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
