--- a/src/pages/Works/Works.module.css
+++ b/src/pages/Works/Works.module.css
@@ -1,7 +1,8 @@
 .worksConteiner {
   background-color: #333;
   color: var(--white-color);
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,7 +39,9 @@
 .contentBox {
   background-color: rgba(141, 80, 80, 0.116);
   padding: 2%;
-  border: 1px solid red;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   width: 100%;
-  height: 80%;
+  height: 100%;
 }
