--- a/src/components/Card/Links/Links.module.css
+++ b/src/components/Card/Links/Links.module.css
@@ -1,10 +1,9 @@
 .linkBox {
   width: 100%;
   display: flex;
-  flex-direction: column;
   gap: 10px;
-  align-items: center;
-  justify-content: center;
+  padding: 5px;
+  position: relative;
 }
 
 .link {
@@ -12,18 +11,22 @@
   color: #fff;
   font-size: 26px;
   opacity: 0.7;
-  width: 100%;
+  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 5px;
+  margin-bottom: 5%;
+  letter-spacing: 0.15em;
+  z-index: 22;
 }
 
 .link:hover {
   transition: 0.3s;
-  color: #d1213e;
-  opacity: 1;
+  color: #f00;
 }
 
-.link:last-child {
-  margin-bottom: 10px;
+.icon {
+  padding-right: 15px;
+  font-size: 26px;
 }
