--- a/src/components/Links/Links.module.css
+++ b/src/components/Links/Links.module.css
@@ -1,17 +1,9 @@
-.linkBox {
-  width: 100%;
-  display: flex;
-  gap: 10px;
-  padding: 5px;
-  position: relative;
-}
-
 .link {
   text-decoration: none;
   color: #fff;
   font-size: 26px;
   opacity: 0.7;
-  width: 50%;
+  width: 40%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,11 +11,16 @@
   margin-bottom: 5%;
   letter-spacing: 0.15em;
   z-index: 22;
+  /* border: 1px solid red; */
+  border-radius: 25px;
+  background-color: rgb(43, 5, 5);
+  transition: linear 0.3s;
+  -webkit-transition: linear 0.3s;
 }
 
 .link:hover {
-  transition: 0.3s;
   color: #f00;
+  background-color: rgb(0, 0, 0);
 }
 
 .icon {
