--- a/src/pages/Works/Works.module.css
+++ b/src/pages/Works/Works.module.css
@@ -1,46 +1,145 @@
-.worksConteiner {
-  background-color: #333;
-  color: var(--white-color);
-  height: 100%;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-}
-
-.box {
+/* .box {
   height: 90%;
   width: 90%;
-}
+} */
 
-.box h1 {
-  background-color: #333;
+/* .box h1 {
+  background-color: #0d0c0f;
   text-align: center;
-}
-
+} */
+/* 
 .navigationLink {
   display: flex;
   justify-content: center;
   gap: 50px;
   flex-wrap: wrap;
-  background-color: #333;
+  background-color: #0d0c0f;
   padding: 45px 0 25px 0;
+} */
+
+/* .link {
+  color: #fff;
+  text-decoration: none;
 }
 
-.link {
-  color: red;
+.link:hover {
+  color: #f00;
   text-decoration: none;
 }
 
 .active {
-  color: rgb(12, 250, 72);
-}
+  color: #f00;
+} */
 
-.contentBox {
-  background-color: rgba(141, 80, 80, 0.116);
+/* .contentBox {
+  background-color: #131215;
   padding: 2%;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   width: 100%;
   height: 100%;
+} */
+
+.worksConteiner {
+  background-color: #000;
+  color: var(--white-color);
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.imageCover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: url("/r.png");
+  background-size: cover;
+  box-shadow: inset 0 0 150px #000, inset 0 0 320px rgba(120, 60, 20, 0.5);
+  opacity: 0.8;
+}
+
+.circle {
+  width: 60%;
+  height: 120%;
+  position: absolute;
+  top: -10%;
+  left: -20%;
+  background-color: #0000006b;
+  backdrop-filter: blur(38px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 50%;
+}
+
+.leftConteiner {
+  width: 45%;
+  height: 60%;
+  position: absolute;
+  top: 18%;
+  left: 40%;
+  /* background-color: #0000006b; */
+  /* backdrop-filter: blur(38px); */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 25px;
+}
+
+.title {
+  -webkit-text-stroke: 1px black;
+  opacity: 1;
+  text-align: center;
+  margin-top: 5%;
+  font-size: 1.5em;
+}
+
+.about {
+  font-size: 0.5em;
+  text-align: justify;
+  text-indent: 2em;
+  width: 80%;
+}
+
+.linkBox {
+  display: flex;
+}
+
+.linkBox {
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  padding: 5px;
+  position: relative;
+  justify-content: center;
+}
+
+.box {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: start;
+  width: 100%;
+}
+
+.texnology {
+  border: 1px solid #eee;
+  border-radius: 25px;
+  padding: 5px 15px;
+  color: #fff;
+  text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 14px;
+  opacity: 0.7;
+  justify-content: center;
+  align-items: center;
 }
