--- a/src/pages/Works/Works.module.css
+++ b/src/pages/Works/Works.module.css
@@ -64,11 +64,12 @@
 }
 
 .circle {
-  width: 60%;
-  height: 120%;
+  width: 70%;
+  height: 140%;
+  transform: translate(-50%, -50%);
   position: absolute;
-  top: -10%;
-  left: -20%;
+  top: 50%;
+  left: 5%;
   background-color: #0000006b;
   backdrop-filter: blur(38px);
   display: flex;
@@ -79,13 +80,12 @@
 }
 
 .leftConteiner {
-  width: 45%;
-  height: 60%;
+  width: 50%;
+  height: 50%;
   position: absolute;
-  top: 18%;
-  left: 40%;
-  /* background-color: #0000006b; */
-  /* backdrop-filter: blur(38px); */
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 67%;
   display: flex;
   flex-direction: column;
   align-items: center;
