--- a/src/pages/Works/Works.module.css
+++ b/src/pages/Works/Works.module.css
@@ -1,46 +1,3 @@
-/* .box {
-  height: 90%;
-  width: 90%;
-} */
-
-/* .box h1 {
-  background-color: #0d0c0f;
-  text-align: center;
-} */
-/* 
-.navigationLink {
-  display: flex;
-  justify-content: center;
-  gap: 50px;
-  flex-wrap: wrap;
-  background-color: #0d0c0f;
-  padding: 45px 0 25px 0;
-} */
-
-/* .link {
-  color: #fff;
-  text-decoration: none;
-}
-
-.link:hover {
-  color: #f00;
-  text-decoration: none;
-}
-
-.active {
-  color: #f00;
-} */
-
-/* .contentBox {
-  background-color: #131215;
-  padding: 2%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-} */
-
 .worksConteiner {
   background-color: #000;
   color: var(--white-color);
@@ -142,4 +99,33 @@
   opacity: 0.7;
   justify-content: center;
   align-items: center;
+}
+
+.rightConteiner {
+  /* border: 1px solid green; */
+  width: 100%;
+  height: 100%;
+}
+
+.embla {
+  overflow: hidden;
+  position: relative;
+  right: -50%;
+  bottom: -55%;
+  width: 50%;
+  height: 30%;
+  border: 1px solid red;
+}
+
+.embla__container {
+  display: flex;
+  gap: 21%;
+  width: 30%;
+  height: 100%;
+}
+
+.embla__slide {
+  flex: 0 0 100%;
+  min-width: 0;
+  backdrop-filter: blur(38px);
 }
