--- a/src/pages/Works/Works.module.css
+++ b/src/pages/Works/Works.module.css
@@ -110,22 +110,44 @@
 .embla {
   overflow: hidden;
   position: relative;
-  right: -50%;
+  /* z-index: -1; */
+  right: -57%;
   bottom: -55%;
-  width: 50%;
-  height: 30%;
-  border: 1px solid red;
+  width: 60%;
+  height: 26%;
+  backdrop-filter: blur(38px);
+  /* padding-left: 10%; */
+  /* border-radius: 50px 0 0 25px; */
 }
 
 .embla__container {
   display: flex;
   gap: 21%;
-  width: 30%;
+  width: 26.6%;
   height: 100%;
+  padding: 35px;
 }
 
 .embla__slide {
-  flex: 0 0 100%;
-  min-width: 0;
+  flex: 0 0 50%;
+  min-width: 75%;
+  background-image: url(/rMini.png);
+  background-size: cover;
+  background-repeat: no-repeat;
   backdrop-filter: blur(38px);
+  align-self: center;
+  height: 75%;
+  border: 1px solid #000;
+  border-radius: 10px;
+}
+
+.active {
+  height: 100%;
+  min-width: 100%;
+  box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #000, 0 0 40px #000;
+}
+
+.embla__slide:hover {
+  transition: 0.3s;
+  box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #000, 0 0 40px #000;
 }
