--- a/src/pages/Works/Works.module.css
+++ b/src/pages/Works/Works.module.css
@@ -151,4 +151,5 @@
 .embla__slide:hover {
   transition: 0.3s;
   box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #000, 0 0 40px #000;
+  cursor: pointer;
 }
