--- a/src/components/ProjectDetail/ProjectDetail.module.css
+++ b/src/components/ProjectDetail/ProjectDetail.module.css
@@ -4,7 +4,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background-image: url("/r.png");
+  background-image: var(--slide-image);
   background-size: cover;
   box-shadow: inset 0 0 150px #000, inset 0 0 320px rgba(120, 60, 20, 0.5);
   opacity: 0.8;
@@ -57,6 +57,7 @@
 
 .linkBox {
   display: flex;
+  z-index: 55;
 }
 
 .linkBox {
@@ -66,6 +67,10 @@
   padding: 5px;
   position: relative;
   justify-content: center;
+}
+
+.link {
+  z-index: 99;
 }
 
 .box {
@@ -89,55 +94,4 @@
   opacity: 0.7;
   justify-content: center;
   align-items: center;
-}
-
-.rightConteiner {
-  /* border: 1px solid green; */
-  width: 100%;
-  height: 100%;
-}
-
-.embla {
-  overflow: hidden;
-  /* display: flex; */
-  position: relative;
-  right: -57%;
-  bottom: -55%;
-  width: 60%;
-  height: 26%;
-  backdrop-filter: blur(38px);
-  cursor: grab;
-}
-
-.embla__container {
-  display: flex;
-  gap: 21%;
-  width: 26.6%;
-  height: 100%;
-  padding: 35px;
-}
-
-.embla__slide {
-  flex: 0 0 50%;
-  min-width: 75%;
-  background-image: url(/rMini.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  backdrop-filter: blur(38px);
-  align-self: center;
-  height: 75%;
-  border: 1px solid #000;
-  border-radius: 10px;
-}
-
-.active {
-  height: 100%;
-  min-width: 100%;
-  box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #000, 0 0 40px #000;
-}
-
-.embla__slide:hover {
-  transition: 0.3s;
-  box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #000, 0 0 40px #000;
-  cursor: pointer;
 }
