--- a/src/pages/Works/Works.module.css
+++ b/src/pages/Works/Works.module.css
@@ -1,5 +1,6 @@
 .worksConteiner {
   background-color: #000;
+  backdrop-filter: blur(38px);
   color: var(--white-color);
   width: 100%;
   height: 100%;
@@ -8,113 +9,21 @@
   overflow: hidden;
 }
 
-.imageCover {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-image: url("/r.png");
-  background-size: cover;
-  box-shadow: inset 0 0 150px #000, inset 0 0 320px rgba(120, 60, 20, 0.5);
-  opacity: 0.8;
-}
-
-.circle {
-  width: 70%;
-  height: 140%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  top: 50%;
-  left: 5%;
-  background-color: #0000006b;
-  backdrop-filter: blur(38px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 50%;
-}
-
-.leftConteiner {
-  width: 50%;
-  height: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 67%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 25px;
-}
-
-.title {
-  -webkit-text-stroke: 1px black;
-  opacity: 1;
-  text-align: center;
-  margin-top: 5%;
-  font-size: 1.5em;
-}
-
-.about {
-  font-size: 0.5em;
-  text-align: justify;
-  text-indent: 2em;
-  width: 80%;
-}
-
-.linkBox {
-  display: flex;
-}
-
-.linkBox {
-  width: 100%;
-  display: flex;
-  gap: 10px;
-  padding: 5px;
-  position: relative;
-  justify-content: center;
-}
-
-.box {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-  align-items: start;
-  width: 100%;
-}
-
-.texnology {
-  border: 1px solid #eee;
-  border-radius: 25px;
-  padding: 5px 15px;
-  color: #fff;
-  text-decoration: none;
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 14px;
-  opacity: 0.7;
-  justify-content: center;
-  align-items: center;
-}
-
 .rightConteiner {
-  /* border: 1px solid green; */
-  width: 100%;
+  bottom: 0;
+  right: 0;
+  width: 50%;
   height: 100%;
   position: absolute;
+  /* pointer-events: none; */
 }
 
 .embla {
   overflow: hidden;
-  /* display: flex; */
   position: relative;
-  right: -57%;
+  right: -40%;
   bottom: -55%;
-  width: 60%;
+  width: 100%;
   height: 26%;
   backdrop-filter: blur(38px);
   cursor: grab;
@@ -131,7 +40,7 @@
 .embla__slide {
   flex: 0 0 50%;
   min-width: 75%;
-  background-image: url(/rMini.png);
+  background-image: var(--slide-mini-image);
   background-size: cover;
   background-repeat: no-repeat;
   backdrop-filter: blur(38px);
