--- a/src/components/ProjectDetail/ProjectDetail.module.css
+++ b/src/components/ProjectDetail/ProjectDetail.module.css
@@ -50,8 +50,7 @@
 
 .about {
   font-size: 0.5em;
-  text-align: justify;
-  text-indent: 2em;
+  text-align: center;
   width: 80%;
 }
 
@@ -79,7 +78,7 @@
   gap: 10px;
   justify-content: center;
   align-items: start;
-  width: 100%;
+  padding-left: 5%;
 }
 
 .texnology {
