--- a/src/pages/Works/Works.module.css
+++ b/src/pages/Works/Works.module.css
@@ -11,7 +11,7 @@
 
 .rightConteiner {
   bottom: 0;
-  right: 0;
+  right: 20%;
   width: 50%;
   height: 100%;
   position: absolute;
@@ -19,6 +19,8 @@
 }
 
 .embla {
+  border-radius: 50px 0 0 50px;
+  padding-right: 150px;
   overflow: hidden;
   position: relative;
   right: -40%;
