--- a/src/components/ProjectDetail/ProjectDetail.module.css
+++ b/src/components/ProjectDetail/ProjectDetail.module.css
@@ -45,11 +45,11 @@
   opacity: 1;
   text-align: center;
   margin-top: 5%;
-  font-size: 1.5em;
+  font-size: 3em !important;
 }
 
 .about {
-  font-size: 0.5em;
+  font-size: 1.5em;
   text-align: center;
   width: 80%;
 }
@@ -89,7 +89,7 @@
   text-decoration: none;
   display: flex;
   flex-wrap: wrap;
-  font-size: 14px;
+  font-size: 14px !important;
   opacity: 0.7;
   justify-content: center;
   align-items: center;
