--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -7,6 +7,8 @@
   justify-content: flex-end;
   align-items: center;
   position: absolute;
+  /* border: 1px solid red; */
+  z-index: 2;
 }
 
 .navLink {
