--- a/src/pages/Works/Works.module.css
+++ b/src/pages/Works/Works.module.css
@@ -1,12 +1,13 @@
 .worksConteiner {
-  background-color: #000;
-  backdrop-filter: blur(38px);
+  /* background-color: #000; */
+  /* backdrop-filter: blur(38px); */
   color: var(--white-color);
   width: 100%;
   height: 100%;
   min-height: 100vh;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .rightConteiner {
