--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -5,24 +5,9 @@
   color: #fff;
 }
 
-.leftBox {
-  display: flex;
-  flex-direction: column;
-  width: 20%;
-  border: 1px solid red;
-}
-
-.leftBox img {
-  width: 100%;
-  height: 30%;
-  align-self: center;
-}
-
 .rightBox {
   margin-top: 10vh;
-  min-height: 90vh;
-  width: 80%;
-  border: 1px solid rgb(51, 179, 35);
+  padding: 5% 5% 5% 5%;
 }
 
 .qualificationBox {
@@ -88,7 +73,7 @@
 }
 
 .timelineContent h3 {
-  color: #2d3436;
+  color: #ffffff;
   margin-bottom: 5px;
   font-size: 1.2em;
 }
@@ -107,7 +92,7 @@
 }
 
 .timelineContent p {
-  color: #2d3436;
+  color: #ffffffcb;
   line-height: 1.5;
   margin-bottom: 15px;
 }
@@ -129,7 +114,7 @@
 }
 
 .skillsList strong {
-  color: #2d3436;
+  color: #0fd108;
   display: inline-block;
   min-width: 120px;
 }
@@ -138,10 +123,10 @@
   padding: 40px 20px;
 }
 
-.skills h2 {
+.rightBox h1 {
   text-align: center;
   margin-bottom: 40px;
-  color: #2d3436;
+  color: #92e3fa;
   font-size: 2em;
 }
 
