--- a/src/pages/NotFound/NotFound.module.css
+++ b/src/pages/NotFound/NotFound.module.css
@@ -17,12 +17,16 @@
   color: #e5e6db;
   position: relative;
   z-index: 2;
+  font-size: 4em;
+  margin-bottom: 0.2em;
   outline: none;
   line-height: 10px;
 }
 
 .text {
   color: #c5c5b3;
+  font-size: 2.5em;
+  text-shadow: 1px 1px 2px #000;
   z-index: 2;
 }
 
@@ -34,7 +38,7 @@
   width: 100%;
   height: 100%;
   color: #cd0921;
-  font-size: 40em;
+  font-size: 110em;
   top: 0;
   left: 0;
   z-index: 1;
@@ -49,6 +53,7 @@
   line-height: 45px;
   font-family: "Great Vibes", cursive;
   animation: sparkle 3s infinite;
+  font-size: 2em;
 }
 
 @keyframes sparkle {
