--- a/src/pages/Contacts/Contacts.module.css
+++ b/src/pages/Contacts/Contacts.module.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  gap: 5px;
+  border: 1px solid red;
+  padding: 25px;
 }
 
 .centerBox {
@@ -36,4 +39,9 @@
 
 .messageTextareaNoResize {
   resize: none;
+}
+
+.input {
+  border: 1px solid red;
+  padding: 10px;
 }
