--- a/src/pages/Hero/Hero.module.css
+++ b/src/pages/Hero/Hero.module.css
@@ -51,6 +51,17 @@ span {
   background: var(--white-color);
 }
 
+.circleImage {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background-image: url("/miAvatar.png");
+  background-size: cover;
+  background-position: center;
+  border: 3px solid red;
+  margin: 0 auto 2rem;
+}
+
 @keyframes bounce {
   0%,
   100% {
